--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^2.10.0",
     "nodemailer": "^6.9.4",
+    "passport": "^0.6.0",
+    "passport-kakao": "^1.0.1",
     "pg": "^8.11.3",
+    "quill": "^1.3.7",
     "react": "^18.2.0",
     "react-js-pagination": "^3.0.3",
     "react-responsive": "^9.0.2",
